...
    });
    C.displayName = displayName;
    return C;
  };
  return {
    __esModule: true,
    Map: named('Map', 'map-view'),
    Camera: named('Camera', 'map-camera', cameraMocks),
    GeoJSONSource: named('GeoJSONSource', undefined, sourceMocks),
    Layer: named('Layer'),
    Images: named('Images'),
    Marker: named('Marker', 'marker'),
    UserLocation: named('UserLocation'),
...
